objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Calculated_Total_Contract_Amount_Report__c</fullName>
        <description>Created to push the individual record type-sourced "Calculated Total Contract Amount" fields into since the fields of origin (ie the individual formula fields) collectively exceed 5000 characters--a SF limit. 2019: Each "Calculated Total Contract Amount (XX)" field pushes into this single field, which is used for reporting, by way of the "R1: Calculated Amount Yr 1" Process Builder (one PB triggers both fields to get populated)</description>
        <inlineHelpText>2019: Each "Calculated Total Contract Amount (XX)" field pushes into this single field, which is used for reporting</inlineHelpText>
        <label>Calculated Total Contract Amount(Report)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Total_Contract_Value__c</fullName>
        <formula>(If (Duration__c &gt;12, (( Calculated_Annual_Bookings__c /12)* Duration__c),
Calculated_Annual_Bookings__c ))+ IF( ISPICKVAL(Solution__c,"Modular - PAS (Modular)"),0,SetUp_Fees__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Total Contract Value- RETIRE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CaseSafeID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloseDateQtr__c</fullName>
        <formula>If (Year(CloseDate) = Year (TODAY()), CEILING( MONTH (CloseDate) / 3 ),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CloseDateQtr#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloseDateRisk__c</fullName>
        <formula>IF( IsClosed  = false,
IF(RecordType.DeveloperName != "Enterprise",
if((CloseDate-Today())&lt;0.8*case(StageCount__c, 1, 225, 2,180 , 3, 135, 4, 75, 5, 45, 0),image("/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0682M00000SG7hb&amp;operationContext=CHATTER&amp;contentId=05T2M00001rC1yu", "green"),
if((CloseDate-Today())&lt; case(StageCount__c, 1, 225, 2,180 , 3, 135, 4, 75, 5, 45, 0),IMAGE("/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0682M00000SG7j0&amp;operationContext=CHATTER&amp;contentId=05T2M00001rC24s","yellow"), 
Image("/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0682M00000SG7jK&amp;operationContext=CHATTER&amp;contentId=05T2M00001rC260", "red"))),""),
"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>CDR=Close Date Risk - is this opportunity progressing along recommended timelines?  Flags opportunities based on current stage and days until close date.</inlineHelpText>
        <label>CDR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Internal_Reason__c</fullName>
        <label>Internal Win Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value</fullName>
                </value>
                <value>
                    <fullName>Strong Access to Buyers</fullName>
                </value>
                <value>
                    <fullName>Strong Coach(s)</fullName>
                </value>
                <value>
                    <fullName>Strong Executive Relationships</fullName>
                </value>
                <value>
                    <fullName>Currently Performing Well as a Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compiere_Doc_Status__c</fullName>
        <inlineHelpText>For reference only</inlineHelpText>
        <label>Compiere Doc Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compiere_Internal_Comments__c</fullName>
        <inlineHelpText>For reference only</inlineHelpText>
        <label>Compiere Internal Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compiere_Order_Quote__c</fullName>
        <externalId>true</externalId>
        <label>Compiere Order/Quote #</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Compiere_Sales_Order__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Quote # from Compiere - for reference only</inlineHelpText>
        <label>Compiere Quote #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concurrent_Users__c</fullName>
        <inlineHelpText>For hosted or hybrid environments, select the number of users</inlineHelpText>
        <label>Number of Users</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>250</fullName>
                </value>
                <value>
                    <fullName>500</fullName>
                </value>
                <value>
                    <fullName>750</fullName>
                </value>
                <value>
                    <fullName>Unlimited</fullName>
                </value>
                <value>
                    <fullName>Other - see details</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confidence_Amount__c</fullName>
        <formula>IF( IsClosed  = false,
IF(RecordType.DeveloperName != "Enterprise",
If( Today()- DATEVALUE(CreatedDate) &lt; case(StageCount__c, 1, 45, 2, 90, 3, 150, 4, 180, 5, 225, 0)
, Amount,0)
,0)
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount of Opp AV is not Red</inlineHelpText>
        <label>Confidence Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contingent_Fees__c</fullName>
        <label>Contingent Fees</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>thirty percent (30%)</fullName>
                    <default>true</default>
                    <label>thirty percent (30%)</label>
                </value>
                <value>
                    <fullName>twenty-five percent (25%)</fullName>
                </value>
                <value>
                    <fullName>thirty-five percent (35%)</fullName>
                </value>
                <value>
                    <fullName>CUSTOM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Comment__c</fullName>
        <label>Contract Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Priority__c</fullName>
        <label>Contract Priority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <inlineHelpText>Updated by accounting</inlineHelpText>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Executed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Number of years for the contract term. This will be used to calculate additional years amounts for SaaS, Hosting and Maintenance products. (Defaults to 1 year)</inlineHelpText>
        <label>Contract Term (yrs)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Converted_from_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Unit__c</fullName>
        <label>Cost Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_of_Goods_Sold__c</fullName>
        <label>Cost of Goods Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Billing_Fee__c</fullName>
        <inlineHelpText>Note amount or percentage of current contract billing fees.</inlineHelpText>
        <label>Current Billing Fee</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Contract_End_Date__c</fullName>
        <inlineHelpText>When does the incumbent vendor's contract expire?</inlineHelpText>
        <label>Current Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Lost_Reason_1__c</fullName>
        <label>Customer Lost Reason 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Financial Value Perception</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
                <value>
                    <fullName>Lack of Funding</fullName>
                </value>
                <value>
                    <fullName>Prior Relationship</fullName>
                </value>
                <value>
                    <fullName>Incumbent</fullName>
                </value>
                <value>
                    <fullName>Do Nothing</fullName>
                </value>
                <value>
                    <fullName>Do It Themselves</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Lost_Reason_2__c</fullName>
        <label>Customer Lost Reason 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Financial Value Perception</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
                <value>
                    <fullName>Lack of Funding</fullName>
                </value>
                <value>
                    <fullName>Prior Relationship</fullName>
                </value>
                <value>
                    <fullName>Incumbent</fullName>
                </value>
                <value>
                    <fullName>Do Nothing</fullName>
                </value>
                <value>
                    <fullName>Do It Themselves</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Lost_Reason_Description__c</fullName>
        <label>Customer Lost Reason Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Won_Reason__c</fullName>
        <label>Customer Win Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trust in our Solutions</fullName>
                </value>
                <value>
                    <fullName>Differentiated Technology</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Financial Value Proposition</fullName>
                </value>
                <value>
                    <fullName>Value of our current Partnership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRM_Consequence__c</fullName>
        <description>What is the consequence of making a non-decision?</description>
        <inlineHelpText>What is the consequence of making a non-decision?</inlineHelpText>
        <label>DRM Consequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRM_Date__c</fullName>
        <description>The date upon which there will be a negative consequence for a non-decision (can be future or past).</description>
        <inlineHelpText>Enter the date upon which there will be a negative consequence for a non-decision (can be future or past).</inlineHelpText>
        <label>DRM Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Related_Motivation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is there a negative consequence associated with a non-decision on this DSO?</description>
        <inlineHelpText>Date Related Motivation:
An event that has either occurred, or is about to occur, which makes your solution necessary.</inlineHelpText>
        <label>Date Related Motivation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Close__c</fullName>
        <formula>If ( StageCount__c &gt; 5, Actual_Close_Date__c - Stage_Change_To_Close_Date__c, 
If (StageCount__c = 5, TODAY() - Stage_Change_To_Close_Date__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Close- RETIRE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Execute__c</fullName>
        <formula>IF ( AND (IsClosed, ISBlank(Stage_Change_To_Propose_Date__c)), Actual_Close_Date__c - Stage_Change_To_Execute_Date__c,
If ( StageCount__c &gt; 3, Stage_Change_To_Propose_Date__c - Stage_Change_To_Execute_Date__c, 
If (StageCount__c = 3, TODAY() - Stage_Change_To_Execute_Date__c,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Execute- RETIRE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Learn__c</fullName>
        <formula>If ( AND(IsClosed, ISBLANK(Stage_Change_to_Qualify_Date__c)), Actual_Close_Date__c - Stage_Change_To_Learn_Date__c,
If ( StageCount__c &gt; 1, Stage_Change_to_Qualify_Date__c - Stage_Change_To_Learn_Date__c, 
If (StageCount__c = 1, TODAY() - Stage_Change_To_Learn_Date__c,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Learn- RETIRE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Old_Before_Becoming_Sales_Accepted__c</fullName>
        <label>Days Old Before Becoming Sales Accepted</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Old__c</fullName>
        <formula>IF(
(IF( AND(IsClosed = True, IsWon = False, NOT(ISBLANK(Actual_Close_Date__c))),
(Actual_Close_Date__c - DATEVALUE(CreatedDate)),

IF( AND(IsClosed = True, IsWon = False, ISBLANK(Actual_Close_Date__c)),  
(DATEVALUE( LastModifiedDate) - DATEVALUE(CreatedDate)), 

IF( AND(IsClosed = True, IsWon = True),  
(CloseDate - DATEVALUE(CreatedDate)), 


(TODAY() - DATEVALUE(CreatedDate))

)
)
)) &gt;= 0, 
(IF( AND(IsClosed = True, IsWon = False, NOT(ISBLANK(Actual_Close_Date__c))),
(Actual_Close_Date__c - DATEVALUE(CreatedDate)),

IF( AND(IsClosed = True, IsWon = False, ISBLANK(Actual_Close_Date__c)),  
(DATEVALUE( LastModifiedDate) - DATEVALUE(CreatedDate)), 

IF( AND(IsClosed = True, IsWon = True),  
(CloseDate - DATEVALUE(CreatedDate)), 


(TODAY() - DATEVALUE(CreatedDate))

)
)
)),0)</formula>
        <label>Days Old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>IF( ISBLANK( CloseDate) , 
TODAY() -  DATEVALUE(CreatedDate) , 
CloseDate -  DATEVALUE(CreatedDate)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open- RETIRE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Propose__c</fullName>
        <formula>If ( AND(IsClosed, ISBLANK(Stage_Change_To_Close_Date__c)), Actual_Close_Date__c - Stage_Change_To_Propose_Date__c,
If ( StageCount__c &gt; 4, Stage_Change_To_Close_Date__c - Stage_Change_To_Propose_Date__c, 
If (StageCount__c = 4, TODAY() - Stage_Change_To_Propose_Date__c,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Propose- RETIRE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Qualify__c</fullName>
        <formula>If ( AND(IsClosed, ISBLANK(Stage_Change_To_Execute_Date__c)), Actual_Close_Date__c - Stage_Change_to_Qualify_Date__c,
If ( StageCount__c &gt; 2, Stage_Change_To_Execute_Date__c - Stage_Change_to_Qualify_Date__c, 
If (StageCount__c = 2, TODAY() - Stage_Change_to_Qualify_Date__c,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Qualify- RETIRE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Target__c</fullName>
        <formula>If ( AND(IsClosed, ISBLANK(Stage_Change_To_Learn_Date__c)), Actual_Close_Date__c - DATEVALUE(CreatedDate),
If ( Stage_Change_To_Learn_Date__c &gt; DATE(1900,1,1), Stage_Change_To_Learn_Date__c - DATEVALUE(CreatedDate), 
If (StageCount__c = 0, TODAY() - DATEVALUE(CreatedDate),0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Target- RETIRE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_as_Qualified_Lead__c</fullName>
        <label>Days as Qualified Lead</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_as_Sales_Qualified_Lead__c</fullName>
        <label>Days as Sales Qualified Lead</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_as_Suspect_Lead__c</fullName>
        <label>Days as Suspect Lead</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Created__c</fullName>
        <formula>If( IsClosed , If ( Actual_Close_Date__c &gt; Date(1900,1,1), Actual_Close_Date__c, CloseDate) -  DATEVALUE(CreatedDate), TODAY() - DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days from Created- RETIRE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Status_PS__c</fullName>
        <formula>IF(TEXT( PS_Request_Status__c )="", NULL,
TODAY()- Last_PS_Status_Update__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Status (PS)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Status__c</fullName>
        <label>Days in Status</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysinCurrentStage__c</fullName>
        <formula>TODAY() - LastStageChange__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DaysinCurrentStage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Date_Deadline__c</fullName>
        <label>Delivery Date Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <inlineHelpText>enter percent discount approved for this opportunity</inlineHelpText>
        <label>Discount</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <description>International Distributors</description>
        <inlineHelpText>For ESi customers only</inlineHelpText>
        <label>Distributor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ARP-CMC (Crisis Management Consulting)</fullName>
                </value>
                <value>
                    <fullName>ARP-EPC (Emergency Planning Consultants)</fullName>
                </value>
                <value>
                    <fullName>ARP-MIR3</fullName>
                </value>
                <value>
                    <fullName>ARP-PDS</fullName>
                </value>
                <value>
                    <fullName>ARP-TriCon (TriCon Environmental)</fullName>
                </value>
                <value>
                    <fullName>ARP-VKMCS (Victory Knights Mgmt &amp; Consulting Svcs Ptd Ltd)</fullName>
                </value>
                <value>
                    <fullName>ARP-VV (Validated Visions)</fullName>
                </value>
                <value>
                    <fullName>Business Associate - see Invoice Partner</fullName>
                </value>
                <value>
                    <fullName>IDA-Atlas Telecom</fullName>
                </value>
                <value>
                    <fullName>IDA-Critchlow</fullName>
                </value>
                <value>
                    <fullName>IDA- Data Mining Company Limited</fullName>
                </value>
                <value>
                    <fullName>IDA-NTTLS (NTT Learning Systems)</fullName>
                </value>
                <value>
                    <fullName>Intermedix/Direct</fullName>
                    <default>true</default>
                    <label>Intermedix/Direct</label>
                </value>
                <value>
                    <fullName>PAR-MIR3</fullName>
                </value>
                <value>
                    <fullName>VAR-BCG</fullName>
                </value>
                <value>
                    <fullName>VAR-CMC (Temporarily)</fullName>
                </value>
                <value>
                    <fullName>VAR-Europower</fullName>
                </value>
                <value>
                    <fullName>VAR-Prime Source</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division_Group__c</fullName>
        <description>Not on page layout - used to set overall division for reports.
ED, AN, OBPM, Practice Management are all in Physician division.</description>
        <formula>CASE (LEFT(TEXT(Division__c) , 3),
"Sys", "Systems",
"Opt", "Systems",
"EMS", "EMS",
"ED ", "Physician/ED",
"AN ", "Physician/AN",
"OBP", "Physician/OBPM",
"Pra", "Physician/PM RCM",
"ANY", "Analytics",
"")</formula>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division/Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>AN RCM</fullName>
                </value>
                <value>
                    <fullName>AN RCM - Add On</fullName>
                </value>
                <value>
                    <fullName>ED RCM</fullName>
                </value>
                <value>
                    <fullName>ED RCM - Add On</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>EMS RCM - Renewal</fullName>
                </value>
                <value>
                    <fullName>OBPM</fullName>
                </value>
                <value>
                    <fullName>OBPM - Add On</fullName>
                </value>
                <value>
                    <fullName>Practice Mgmt RCM</fullName>
                </value>
                <value>
                    <fullName>Practice Mgmt RCM - Add On</fullName>
                </value>
                <value>
                    <fullName>Systems</fullName>
                </value>
                <value>
                    <fullName>Systems - CSM Sales</fullName>
                </value>
                <value>
                    <fullName>Systems - Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Docs_Needed__c</fullName>
        <inlineHelpText>Documents needed in order to process PO.  Please be proactive in collecting to expedite the order process.</inlineHelpText>
        <label>Docs Needed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Affidavit/ Certificate</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>ASP Agmt</fullName>
                </value>
                <value>
                    <fullName>BAA</fullName>
                </value>
                <value>
                    <fullName>Certificate of Insurance</fullName>
                </value>
                <value>
                    <fullName>Consulting Agreement</fullName>
                </value>
                <value>
                    <fullName>Distributor Agreement</fullName>
                </value>
                <value>
                    <fullName>EULA Agmt</fullName>
                </value>
                <value>
                    <fullName>Maintenance Agreement</fullName>
                </value>
                <value>
                    <fullName>Master Services Agreement</fullName>
                </value>
                <value>
                    <fullName>Misc - see Status</fullName>
                </value>
                <value>
                    <fullName>NDA</fullName>
                </value>
                <value>
                    <fullName>Professional Services Agreement</fullName>
                </value>
                <value>
                    <fullName>Reseller Agmt</fullName>
                </value>
                <value>
                    <fullName>Service Agreement</fullName>
                </value>
                <value>
                    <fullName>Software License Agreement</fullName>
                </value>
                <value>
                    <fullName>SOW</fullName>
                </value>
                <value>
                    <fullName>SUA (trials only)</fullName>
                </value>
                <value>
                    <fullName>Use Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <defaultValue>IF( $RecordType.DeveloperName = "Enterprise" ,60, 
 IF ($RecordType.DeveloperName = "Modular",24,
12))</defaultValue>
        <inlineHelpText>Autopopulated based on Opp record Type but Opp owner can alter as needed. Enterprise: 60 mo, Modular: 24, Chart Audits &amp; Classes 1, All Others: 12.</inlineHelpText>
        <label>Contract Terms (Mo)</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMS_RCM_Amt_Calc__c</fullName>
        <formula>of_Billable_Transports__c * Revenue_per_Unit__c * Fee__c</formula>
        <label>EMS RCM Amt Calc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMS_Vehicles__c</fullName>
        <label># of Vehicles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESi_Interfaces_Solution_Center_Products__c</fullName>
        <inlineHelpText>Please contact Solutions Team for SOW.</inlineHelpText>
        <label>ESi Interfaces/Solution Center Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active Directory</fullName>
                </value>
                <value>
                    <fullName>Active WebEOC Users Board</fullName>
                </value>
                <value>
                    <fullName>Advanced File Library</fullName>
                </value>
                <value>
                    <fullName>Board Data Importer</fullName>
                </value>
                <value>
                    <fullName>Board Data Manager</fullName>
                </value>
                <value>
                    <fullName>Board Scheduler</fullName>
                </value>
                <value>
                    <fullName>BoardsTalk</fullName>
                </value>
                <value>
                    <fullName>Contacts Manager</fullName>
                </value>
                <value>
                    <fullName>Custom Status Maps</fullName>
                </value>
                <value>
                    <fullName>EMResource Interface</fullName>
                </value>
                <value>
                    <fullName>EMTrack Interface</fullName>
                </value>
                <value>
                    <fullName>EN Form (Nuclear Customers)</fullName>
                </value>
                <value>
                    <fullName>Enterprise Seating Chart</fullName>
                </value>
                <value>
                    <fullName>Enterprise User Importer</fullName>
                </value>
                <value>
                    <fullName>Graph Reports</fullName>
                </value>
                <value>
                    <fullName>KML Feed for Google Earth</fullName>
                </value>
                <value>
                    <fullName>Messages Manager</fullName>
                </value>
                <value>
                    <fullName>MIR3</fullName>
                </value>
                <value>
                    <fullName>Notifications</fullName>
                </value>
                <value>
                    <fullName>Resource Management</fullName>
                </value>
                <value>
                    <fullName>RRDM</fullName>
                </value>
                <value>
                    <fullName>Volunteer Management</fullName>
                </value>
                <value>
                    <fullName>WebEOC Dashboard</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EX_Blue_Sheet_Override__c</fullName>
        <inlineHelpText>This overrides the selection criteria for a blue sheet.  If Y, then a blue sheet is required independent of the selection criteria.  If N, then the blue sheet is not required at all.</inlineHelpText>
        <label>EX-Blue Sheet Override</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sales_Milestones</valueSetName>
        </valueSet>
    </fields>
</CustomObject>